# libhangul

./: CMakeLists.txt  CMakePresets.json  README.md  build.bat  libhangul.def  libhangul.sln  libhangul.vcxproj  libhangul.vcxproj.filters
